implement search modal

--- a/src/content/events/linaro-huawei-tech-day.mdx
+++ b/src/content/events/linaro-huawei-tech-day.mdx
@@ -6,6 +6,7 @@ date_published: 2023-02-03 05:48:11 +01:00
 event_start: 2023-03-07 09:00:29 +01:00
 event_end: 2023-03-07 11:45:11 +01:00
 image: linaro-website/images/events/huawei-tech-day-23
+location: Virtual
 type: tech_days
 button:
   text: register
