--- a/src/content/events/fosdem-24-is-here-and-linaro-is-present-at-the-event-more-than-ever.mdx
+++ b/src/content/events/fosdem-24-is-here-and-linaro-is-present-at-the-event-more-than-ever.mdx
@@ -9,6 +9,7 @@ date_published: 2024-02-02 08:49:28 +08:00
 event_start: 2024-02-03 09:30:52 +08:00
 event_end: 2024-02-04 05:50:28 +08:00
 image: linaro-website/images/events/fosdem-24
+location: Brussels, Belgium
 type: attend
 button:
   text: Register
