--- a/src/content/events/long-term-support-lts-for-the-linux-kernel-what-s-changing-now.mdx
+++ b/src/content/events/long-term-support-lts-for-the-linux-kernel-what-s-changing-now.mdx
@@ -10,6 +10,7 @@ event_start: 2024-04-03 05:30:00 +01:00
 event_end: 2024-04-03 04:30:03 +01:00
 image: linaro-website/images/events/lts-webinar
 type: webinar
+location: Virtual
 button:
   text: Register
   url: https://www.eventbrite.co.uk/e/long-term-support-lts-for-the-linux-kernel-whats-changing-now-tickets-856142694847?aff=oddtdtcreator
