--- a/src/content/events/need-your-device-s-use-of-open-source-software-to-be-more-production-ready-linaro-can-lend-a-hand.mdx
+++ b/src/content/events/need-your-device-s-use-of-open-source-software-to-be-more-production-ready-linaro-can-lend-a-hand.mdx
@@ -7,6 +7,7 @@ event_start: 2023-12-12 12:32:14 +00:00
 event_end: 2023-12-12 05:32:14 +00:00
 image: linaro-website/images/events/ds-webinar-banner-for-event-page
 type: webinar
+location: Virtual
 button:
   text: Register
   url: https://www.cognitoforms.com/Linaro1/_
