fix register text on events

--- a/src/content/events/embedded-open-source-summit-2023.mdx
+++ b/src/content/events/embedded-open-source-summit-2023.mdx
@@ -12,7 +12,7 @@ event_end: 2023-06-30 06:10:27 +02:00
 image: linaro-website/images/events/embedded-open-source-2023
 type: presenter
 button:
-  text: Register
+  text: View
   url: https://events.linuxfoundation.org/embedded-open-source-summit/
 ---
 
