--- a/src/content/events/fosdem-24-is-here-and-linaro-is-present-at-the-event-more-than-ever.mdx
+++ b/src/content/events/fosdem-24-is-here-and-linaro-is-present-at-the-event-more-than-ever.mdx
@@ -12,7 +12,7 @@ image: linaro-website/images/events/fosdem-24
 location: Brussels, Belgium
 type: attend
 button:
-  text: Register
+  text: View
   url: https://fosdem.org/2024/
 ---
 
