--- a/src/content/events/isc-high-performance-2023.mdx
+++ b/src/content/events/isc-high-performance-2023.mdx
@@ -11,7 +11,7 @@ event_end: 2023-05-25 06:00:06 +02:00
 image: linaro-website/images/events/isc-high-performance-2023-banner
 type: presenter
 button:
-  text: Register
+  text: View
   url: https://www.isc-hpc.com/agenda-2023.html
 ---
 
