--- a/src/content/events/kvm-forum-2023.mdx
+++ b/src/content/events/kvm-forum-2023.mdx
@@ -10,7 +10,7 @@ event_end: 2023-06-15 05:00:55 +02:00
 image: linaro-website/images/events/kvm-forum-23
 type: presenter
 button:
-  text: Register
+  text: View
   url: https://kvm-forum.qemu.org/2023/
 ---
 
