--- a/src/content/events/linaro-huawei-tech-day.mdx
+++ b/src/content/events/linaro-huawei-tech-day.mdx
@@ -9,7 +9,7 @@ image: linaro-website/images/events/huawei-tech-day-23
 location: Virtual
 type: tech_days
 button:
-  text: register
+  text: View
   url: https://www.eventbrite.co.uk/e/linaro-huawei-tech-day-tickets-529367361027
 ---
 
