--- a/src/content/events/long-term-support-lts-for-the-linux-kernel-what-s-changing-now.mdx
+++ b/src/content/events/long-term-support-lts-for-the-linux-kernel-what-s-changing-now.mdx
@@ -12,7 +12,7 @@ image: linaro-website/images/events/lts-webinar
 type: webinar
 location: Virtual
 button:
-  text: Register
+  text: View
   url: https://www.eventbrite.co.uk/e/long-term-support-lts-for-the-linux-kernel-whats-changing-now-tickets-856142694847?aff=oddtdtcreator
 ---
 
