--- a/src/content/events/need-your-device-s-use-of-open-source-software-to-be-more-production-ready-linaro-can-lend-a-hand.mdx
+++ b/src/content/events/need-your-device-s-use-of-open-source-software-to-be-more-production-ready-linaro-can-lend-a-hand.mdx
@@ -9,7 +9,7 @@ image: linaro-website/images/events/ds-webinar-banner-for-event-page
 type: webinar
 location: Virtual
 button:
-  text: Register
+  text: View
   url: https://www.cognitoforms.com/Linaro1/_
 ---
 
