--- a/src/content/events/open-infrastructure-summit.mdx
+++ b/src/content/events/open-infrastructure-summit.mdx
@@ -14,7 +14,7 @@ event_end: 2023-06-15 06:00:14 +02:00
 image: linaro-website/images/events/ois-23
 type: presenter
 button:
-  text: Register
+  text: View
   url: https://openinfra.dev/summit/vancouver-2023
 ---
 
