--- a/src/content/events/openeuler-developer-day-2023.mdx
+++ b/src/content/events/openeuler-developer-day-2023.mdx
@@ -11,7 +11,7 @@ event_end: 2023-04-21 11:45:30 +01:00
 image: linaro-website/images/events/openeuler-dd-image
 type: presenter
 button:
-  text: Register
+  text: View
   url: https://www.openeuler.org/zh/interaction/summit-list/devday2023/
 ---
 This ODD 2023 will comprehensively showcase the features of the newly released innovative version 23.03, as well as technological achievements in diverse computing and cross-scenario collaboration, share business practices based on openEuler across various industries, exhibit openEuler's cooperation and research progress with international open source communities and universities.
