--- a/src/content/events/rmacc-high-performance-computing-symposium.mdx
+++ b/src/content/events/rmacc-high-performance-computing-symposium.mdx
@@ -12,7 +12,7 @@ event_end: 2023-05-18 01:00:11 +02:00
 image: linaro-website/images/events/rmacc-banner
 type: sponsor
 button:
-  text: Register
+  text: View
   url: https://hpcsymposium.rmacc.org
 ---
 Speaker:  Beau Paisley, Principal Solutions Architect at Linaro
