--- a/src/content/events/upstream-kernel-development-delivered-by-linaro.mdx
+++ b/src/content/events/upstream-kernel-development-delivered-by-linaro.mdx
@@ -15,7 +15,7 @@ event_end: 2023-07-18 08:30:04 +02:00
 image: linaro-website/images/events/techwebinars_events_page
 type: webinar
 button:
-      text: Register
+      text: View
       url: https://www.cognitoforms.com/Linaro1/UpstreamKernelDevelopmentdeliveredByLinaro
 ---
 This course will be held in 2 sessions.
