chiara feedback fixes

--- a/src/content/blogs/how-to-build-and-test-the-linux-kernel-locally.mdx
+++ b/src/content/blogs/how-to-build-and-test-the-linux-kernel-locally.mdx
@@ -9,6 +9,7 @@ date: 2024-05-07T02:31:55.000Z
 image: linaro-website/images/blog/Banner_Toolchain
 tags:
   - testing
+  - linux-kernel
 author: alok-ranjan
 related: []
 
