--- a/src/content/blogs/passing-information-across-bootloader-components.mdx
+++ b/src/content/blogs/passing-information-across-bootloader-components.mdx
@@ -9,6 +9,8 @@ date: 2024-04-29T00:00:25.000Z
 image: linaro-website/images/blog/Banner_Virtualization
 tags:
   - u-boot
+  - iot-embedded
+  - edge
 author: raymond-mao
 related: []
 
