--- a/src/content/blogs/subkeys-in-op-tee-part-1.mdx
+++ b/src/content/blogs/subkeys-in-op-tee-part-1.mdx
@@ -9,6 +9,7 @@ image: linaro-website/images/blog/Code_Image_Core_tech
 tags:
   - open-source
   - security
+  - linux-kernel
 author: jens-wiklander
 related: []
 
