--- a/src/content/blogs/subkeys-in-op-tee-part-2.mdx
+++ b/src/content/blogs/subkeys-in-op-tee-part-2.mdx
@@ -9,6 +9,7 @@ date: 2024-04-26T01:48:55.000Z
 image: linaro-website/images/blog/Code_Image_Core_tech
 tags:
   - security
+  - toolchain
 author: jens-wiklander
 related: []
 
