--- a/src/content/blogs/tuxmake-building-linux-with-kernel-org-toolchains.mdx
+++ b/src/content/blogs/tuxmake-building-linux-with-kernel-org-toolchains.mdx
@@ -8,6 +8,7 @@ image: linaro-website/images/blog/Tech_Background
 tags:
   - testing
   - linux-kernel
+  - toolchain
 author: senthil-kumaran
 related: []
 
