--- a/src/content/blogs/type-tracking-using-arm-memory-tagging.mdx
+++ b/src/content/blogs/type-tracking-using-arm-memory-tagging.mdx
@@ -9,6 +9,7 @@ date: 2024-04-08T09:17:02.000Z
 image: linaro-website/images/blog/Code_Image_Core_tech
 tags:
   - arm
+  - toolchain
 author: david-spickett
 related: []
 
