--- a/src/content/news/linaro-announces-qualcomm-as-the-new-member-of-the-linaro-edge-group-ledge.mdx
+++ b/src/content/news/linaro-announces-qualcomm-as-the-new-member-of-the-linaro-edge-group-ledge.mdx
@@ -10,6 +10,8 @@ image: linaro-website/images/news/Auto_IoT_Edge_banner_pic
 author: linaro
 tags:
   - iot-embedded
+  - edge
+  - qualcomm
 related: []
 ---
 
