--- a/src/content/blogs/linaro-helps-openeuler-to-officially-join-ceph-support-matrix.mdx
+++ b/src/content/blogs/linaro-helps-openeuler-to-officially-join-ceph-support-matrix.mdx
@@ -9,6 +9,7 @@ image: linaro-website/images/blog/screenshot-2023-08-11-at-11.37.28
 tags:
   - linux-kernel
   - open-source
+  - datacenter
 author: kevin-zhao
 related: []
 
