--- a/src/content/blogs/multi-circular-queue-mcq-support-gets-added-to-the-ufs-subsystem.mdx
+++ b/src/content/blogs/multi-circular-queue-mcq-support-gets-added-to-the-ufs-subsystem.mdx
@@ -6,6 +6,7 @@ date: 2023-02-14T01:21:12.000Z
 image: linaro-website/images/blog/Banner_Virtualization
 tags:
   - linux-kernel
+  - qualcomm
 author: manivannan-sadhasivam
 related: []
 
