--- a/src/content/blogs/upstream-linux-support-now-available-for-the-the-qualcomm-snapdragon-8-gen-3-mobile-platform.mdx
+++ b/src/content/blogs/upstream-linux-support-now-available-for-the-the-qualcomm-snapdragon-8-gen-3-mobile-platform.mdx
@@ -8,6 +8,7 @@ date: 2023-10-26T10:02:02.000Z
 image: linaro-website/images/blog/stack
 tags:
   - linux-kernel
+  - qualcomm
 author: neil-armstrong
 related: []
 
