update docs, implement new consulting graphics, update redirects

--- a/src/content/blogs/a-closer-look-at-virtio-and-gpu-virtualisation.mdx
+++ b/src/content/blogs/a-closer-look-at-virtio-and-gpu-virtualisation.mdx
@@ -7,6 +7,7 @@ date: 2023-06-21T01:16:56.000Z
 image: linaro-website/images/blog/whatsapp-image-2023-06-21-at-14.25.03
 tags:
   - virtualization
+  - automotive
 author: alex-bennee
 related: []
 
