--- a/src/content/blogs/network-latency-with-time-sensitive-networking-on-virtual-machine.mdx
+++ b/src/content/blogs/network-latency-with-time-sensitive-networking-on-virtual-machine.mdx
@@ -6,6 +6,7 @@ date: 2023-05-15T08:34:27.000Z
 image: linaro-website/images/blog/Banner_Virtualization
 tags:
   - virtualization
+  - automotive
 author: takahiro-akashi
 related: []
 ---
