Adjust tags for news post

--- a/src/content/news/linaro-undergoes-transformation-introducing-the-new-brand.mdx
+++ b/src/content/news/linaro-undergoes-transformation-introducing-the-new-brand.mdx
@@ -5,8 +5,8 @@ description: In this press release Linaro announces a new collaboration with Ren
 date: 2024-05-14 14:00:00 +00:00
 image: linaro-website/graphics/bg-logo-2
 tags:
-  - iot-embedded
-  - security
+  - arm
+  - linaro-connect
 author: linaro
 related: []
 ---
