--- a/src/content/news/linaro-unveils-onelab-at-connect-revolutionizing-edge-compute-interoperability-testing.mdx
+++ b/src/content/news/linaro-unveils-onelab-at-connect-revolutionizing-edge-compute-interoperability-testing.mdx
@@ -20,7 +20,7 @@ ONELab, Linaro's innovative interoperability testing platform, provides a collab
 
 "We are excited to unveil ONELab at Linaro Connect, the most important conference for the Arm ecosystem," said Grant Likely, CTO at Linaro. "ONELab represents a significant step towards overcoming the challenges of cloud-native edge computing. By fostering collaboration and interoperability testing, we aim to create a more secure, efficient, and scalable ecosystem for Edge and IoT devices."
 
-The launch of ONELab has already garnered strong support from industry leaders, with ADLINK, AMD, Arm, Bosch Software and Digital Solutions and Qualcomm among the supporting partners.
+The launch of ONELab has already garnered strong support from industry leaders, with ADLINK, AMD, Arm, Bosch Software and Digital Solutions, Qualcomm, Red Hat, Renesas and TI among the supporting partners.
 
 "As the number of connected devices increases exponentially, software compatibility is crucial and developers need to be equipped with tools that enable frictionless development and faster time to market,” said Mark Hambleton, SVP Software at Arm. “ONELab is the result of collaboration across the Arm ecosystem and will support developers with the deployment of edge and IoT solutions, at scale.”
 
