--- a/src/content/news/linaro-unveils-onelab-at-connect-revolutionizing-edge-compute-interoperability-testing.mdx
+++ b/src/content/news/linaro-unveils-onelab-at-connect-revolutionizing-edge-compute-interoperability-testing.mdx
@@ -30,7 +30,7 @@ The launch of ONELab has already garnered strong support from industry leaders, 
 
 “We welcome the launch of Linaro`s ONELab,” said Kai Hackbarth, Head of Products and Solutions at Bosch SDS. “As the importance of connected devices is steadily increasing, interoperability testing is crucial to reduce time-to-market for development of cloud native edge solutions and to help overcome a highly fragmented landscape. The birth of ONELab is an important step to further facilitate the adoption of Edge and IoT devices based on seamless collaboration across organizations.” 
 
-“Qualcomm is thrilled to bring RB2 Edge Compute platform to ONELab towards continuous testing/integration of Open-source OSs/Upstream Kernel and ARM Syste-Ready-IR test suite”, said Guru Chinnabhandar, Senior Director, Engineering at Qualcomm. “This paves the way for host of other IoT Edge Compute platforms such as RB1, RB3, RB5, RB3Gen2 and RB5Gen2.”
+“Qualcomm is thrilled to bring RB2 Edge Compute platform to ONELab towards continuous testing/integration of Open-source OSs/Upstream Kernel and ARM System-Ready-IR test suite”, said Guru Chinnabhandar, Senior Director, Engineering at Qualcomm. “This paves the way for host of other IoT Edge Compute platforms such as RB1, RB3, RB5, RB3Gen2 and RB5Gen2.”
 
 
 Visit www.linaro.org/onelab
