--- a/src/content/news/linaro-unveils-onelab-at-connect-revolutionizing-edge-compute-interoperability-testing.mdx
+++ b/src/content/news/linaro-unveils-onelab-at-connect-revolutionizing-edge-compute-interoperability-testing.mdx
@@ -2,7 +2,7 @@
 title: Linaro Unveils ONELab at Linaro Connect, Revolutionizing Edge Compute Interoperability Testing
 description: In this press release Linaro announces a new collaboration with Renesas to run SOAFEE test suite on Renesas automotive products
 date: 2024-05-15 08:35:31 +00:00
-image: linaro-website/images/news/toolchain_72-1-
+image: linaro-website/images/news/onelab.png
 tags:
   - iot-embedded
   - security
@@ -10,13 +10,14 @@ author: linaro
 related: []
 ---
 
-Linaro Unveils ONELab at Linaro Connect, Revolutionizing Edge Compute Interoperability Testing
+*Linaro Unveils ONELab at Linaro Connect, Revolutionizing Edge Compute Interoperability Testing*
 
 Linaro Connect, Madrid, Spain; [Wednesday 15 May] – Linaro, the leading engineering organization driving innovation in the Arm ecosystem, today announced the launch of ONELab, a groundbreaking initiative aimed at revolutionizing interoperability testing for Edge and IoT devices. The announcement was made during the second day of the Linaro Connect conference, representing a significant milestone in addressing the challenges of cloud-native edge computing.
 
 In today's rapidly evolving digital landscape, the demand for sophisticated edge compute solutions has never been higher. The proliferation of connected devices, coupled with the need for efficient data processing closer to its source, has underscored the importance of interoperability testing in ensuring seamless deployment of cloud-native edge solutions.
 
-ONELab, Linaro's innovative interoperability testing platform, provides a collaborative environment for Silicon Vendors (SiPs) and Original Design Manufacturers (ODMs) to validate hardware and software compatibility with operating systems and cloud services. The platform streamlines the testing process, significantly reducing time-to-market and minimizing risks associated with compatibility issues.
+ONELab, Linaro's innovative interoperability testing platform, provides a collaborative 
+environment for Silicon Vendors (SiPs) and Original Design Manufacturers (ODMs) to validate hardware and software compatibility with operating systems and cloud services. The platform streamlines the testing process, significantly reducing time-to-market and minimizing risks associated with compatibility issues.
 
 "We are excited to unveil ONELab at Linaro Connect, the most important conference for the Arm ecosystem," said Grant Likely, CTO at Linaro. "ONELab represents a significant step towards overcoming the challenges of cloud-native edge computing. By fostering collaboration and interoperability testing, we aim to create a more secure, efficient, and scalable ecosystem for Edge and IoT devices."
 
@@ -32,5 +33,4 @@ The launch of ONELab has already garnered strong support from industry leaders, 
 
 “Qualcomm is thrilled to bring RB2 Edge Compute platform to ONELab towards continuous testing/integration of Open-source OSs/Upstream Kernel and ARM System-Ready-IR test suite”, said Guru Chinnabhandar, Senior Director, Engineering at Qualcomm. “This paves the way for host of other IoT Edge Compute platforms such as RB1, RB3, RB5, RB3Gen2 and RB5Gen2.”
 
-
-Visit www.linaro.org/onelab
+Visit https://www.linaro.org/solutions/onelab
