Add sentence per ticket request

--- a/src/content/blogs/how-to-build-and-test-the-linux-kernel-locally.mdx
+++ b/src/content/blogs/how-to-build-and-test-the-linux-kernel-locally.mdx
@@ -124,6 +124,8 @@ TuxSuite's new local plan execution feature brings increased development speed, 
 
 By incorporating this feature into your workflow, you can significantly enhance your Linux kernel development experience for managing build and test tasks.
 
+For more information, check out the session we presented at Linaro Connect Madrid 2024 titled "[MAD24-214 Modern CI Solutions for Linux Kernel Testing](https://resources.linaro.org/en/resource/2f69EFtmXwFEt8zcESmEi2)".
+
 ## Useful Links
 
 * [https://docs.tuxsuite.com/plan/kernel](https://docs.tuxsuite.com/plan/kernel/)
