--- a/src/content/blogs/microsoft-to-talk-iot-security-with-azure-sphere-at-the-upcoming-linaro-connect-san-diego-2019.mdx
+++ b/src/content/blogs/microsoft-to-talk-iot-security-with-azure-sphere-at-the-upcoming-linaro-connect-san-diego-2019.mdx
@@ -1,10 +1,9 @@
 ---
-title: Microsoft to talk IoT security with Azure Sphere at the upcoming Linaro
-  Connect San Diego 2019
+title: Microsoft to talk IoT security with Azure Sphere at the upcoming Linaro Connect San Diego 2019
 date: 2019-09-10T08:22:35.000Z
+description: icrosoft to talk IoT security with Azure Sphere at the upcoming Linaro Connect San Diego 2019
 image: linaro-website/images/blog/microsoft-sphere-2
 tags:
-  - linaro-connect
   - linux-kernel
   - security
   - iot-embedded
