--- a/src/content/blogs/tuxpub-the-serverless-file-server.mdx
+++ b/src/content/blogs/tuxpub-the-serverless-file-server.mdx
@@ -1,10 +1,11 @@
 ---
 title: tuxpub - The Serverless File Server
+description: Linaro is presently working on a SaaS offering called TuxBuild (and companion service called TuxBoot). These technologies are implemented using the new serverless model and have a need to provide artifacts from cloud storage using a lightweight application that provides a file browser as a web-based user front end.
 date: 2020-06-02T11:10:28.000Z
 image: linaro-website/images/blog/code_highway_small
 tags:
   - datacenter
-author: ben-copeland
+author: benjamin-copeland
 related: []
 
 ---
