--- a/src/content/blogs/what-to-expect-from-linaro-at-the-embedded-linux-conference-europe-2019.mdx
+++ b/src/content/blogs/what-to-expect-from-linaro-at-the-embedded-linux-conference-europe-2019.mdx
@@ -1,5 +1,6 @@
 ---
 title: What to expect from Linaro at the Embedded Linux Conference (Europe) 2019
+description: Linaro will be exhibiting at ELC-E in Lyon next week, showing engineering solutions for the Arm Ecosystem and how we work with members to consolidate codebases in the ecosystem as a whole and in specific market segments.
 date: 2019-10-22T09:48:58.000Z
 image: linaro-website/images/blog/40965990761_090a30658a_k
 tags:
@@ -10,8 +11,7 @@ related: []
 
 ---
 
-Linaro will be exhibiting at ELC-E in Lyon next week, showing engineering solutions
-for the Arm Ecosystem and how we work with members to consolidate codebases in the ecosystem as a whole and in specific market segments.
+Linaro will be exhibiting at ELC-E in Lyon next week, showing engineering solutions for the Arm Ecosystem and how we work with members to consolidate codebases in the ecosystem as a whole and in specific market segments.
 
 **On the Linaro stand we’ll be talking about:**
 
