--- a/src/content/blogs/96boards-and-horizon-robotics-jointly-launch-aiot-development-platform-bootprint-x2-kit.mdx
+++ b/src/content/blogs/96boards-and-horizon-robotics-jointly-launch-aiot-development-platform-bootprint-x2-kit.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Linaro and Horizon Robotics jointly launch AIoT development platform:
   BOOTPRINT X2 kit"
+description: Linaro Ltd, the open source collaborative engineering organization developing software for the Arm® ecosystem, and 96Boards Partner Horizon Robotics today announced the launch of the BOOTPRINT X2 kit.
 date: 2019-10-31T11:48:43.000Z
 image: linaro-website/images/blog/27094831048_6ecb96f52a_o
 tags:
