--- a/src/content/blogs/automotive-hyperscalers-testing-on-arm-and-more-introducing-linaro-virtual-connect-fall-2021.mdx
+++ b/src/content/blogs/automotive-hyperscalers-testing-on-arm-and-more-introducing-linaro-virtual-connect-fall-2021.mdx
@@ -8,8 +8,9 @@ date: 2021-08-18T12:57:31.000Z
 image: linaro-website/images/blog/48784720458_63040ac998_k
 strap_image: /assets/images/content/48784720458_63040ac998_k.jpg
 tags:
-  - linaro-connect
-author: connect
+  - virtualization
+  - automotive
+author: linaro
 related: []
 
 ---
