--- a/src/content/blogs/linaro-connect-budapest-2020-cancelled.mdx
+++ b/src/content/blogs/linaro-connect-budapest-2020-cancelled.mdx
@@ -1,10 +1,10 @@
 ---
 title: Linaro Connect Budapest 2020 cancelled
 date: 2020-02-20T08:53:19.000Z
+description: Over the last few weeks, Linaro has been carefully monitoring the Coronavirus situation. We have a duty of care for all attendees at our events. Health and safety is always our top priority. With that in mind, it is with great regret that we have decided to cancel the upcoming Linaro Connect which was due to be held on 23-27 March 2020 at the Corinthia Hotel in Budapest, Hungary.
 image: linaro-website/images/blog/48784720458_63040ac998_k
-tags:
-  - linaro-connect
-author: connect
+tags: []
+author: linaro
 related: []
 
 ---
