--- a/src/content/blogs/standard-temperature-tooling-now-a-reality-in-the-linux-kernel.mdx
+++ b/src/content/blogs/standard-temperature-tooling-now-a-reality-in-the-linux-kernel.mdx
@@ -1,5 +1,6 @@
 ---
 title: Standard Temperature Tooling in the Linux kernel
+description: With the Linux 5.6 release, it was announced that there is a proper drive temperature driver for disks and solid-state drives with temperature sensors - something that has been in the works for years. So what does this mean? Why is this significant? And how did Linaro play a role?
 image: linaro-website/images/blog/30921180788_34ce2cd5f8_c
 tags:
   - linux-kernel
