finish migrating wordpress era blogs

--- a/src/content/blogs/linaro-announces-keynote-speakers-demos-upcoming-linaro-connect-hong-kong.mdx
+++ b/src/content/blogs/linaro-announces-keynote-speakers-demos-upcoming-linaro-connect-hong-kong.mdx
@@ -19,7 +19,7 @@ Linaro, the collaborative engineering organization developing open source softwa
 
 * Jon Masters - Chief Arm Architect, Redhat
 
-* Dejan Milojicic - Senior Researcher & Manager, HP Labs
+* Dejan Milojicic - Senior Researcher & Manager, HP Labs!
 
 * Bob Monkman - Enterprise Segment Marketing Manager, Arm
 
