--- a/src/content/blogs/meltdown-spectre.mdx
+++ b/src/content/blogs/meltdown-spectre.mdx
@@ -2,7 +2,8 @@
 keywords: Meltdown, Spectre, Arm, OP-TEE, Trustzone, Speculative execution,
   branch predictor, CPU cache, Set-Associative-Cache, side channel attack,
   Simple Power Analysis, Differential Power Analysis, crypto,
-title: Implications of Meltdown and Spectre &#58; Part 1
+title: > 
+  Implications of Meltdown and Spectre: Part 1
 description: In this article, Joakim Bech looks at the implications of meltdown
   & spectre in practice and how it could affect secure domains like TrustZone.
   Read more here!
