Add missing alt text

--- a/src/content/blogs/onelab-launch-at-linaro-connect-madrid-2024.mdx
+++ b/src/content/blogs/onelab-launch-at-linaro-connect-madrid-2024.mdx
@@ -34,7 +34,7 @@ A groundbreaking highlight was the ease with which diverse partner DUTs were att
 
 Enabling the Qualcomm RB2 | Enabling the TI SK-AM62B
 :---:|:---:
-![](/linaro-website/images/blog/enabling-qualcomm-rb2_pxtv96.jpg) | ![](/linaro-website/images/blog/enabling-ti-sk-am62b_t5ulnz.jpg)
+![Enabling the Qualcomm RB2](/linaro-website/images/blog/enabling-qualcomm-rb2_pxtv96.jpg) | ![Enabling the TI SK-AM62B](/linaro-website/images/blog/enabling-ti-sk-am62b_t5ulnz.jpg)
 
 The Linaro Automation Appliance (LAA) was able to control both boards' critical features, such as UART, Ethernet, and power and reset, allowing them to remotely participate in the ONELab.
 
@@ -42,7 +42,7 @@ The [LAA](https://resources.linaro.org/en/resource/fwWCArmwQyjvLgnFMdZwwT) provi
 
 We plan to prove this enablement by shipping the boards directly to our lab in Cambridge and assigning the remaining bring-up tasks to one of our non-Cambridge employees.
 
-![](/linaro-website/images/blog/onelab-powered-by-linaro_lssvkh.jpg)
+![Poster of ONELab powered by Linaro](/linaro-website/images/blog/onelab-powered-by-linaro_lssvkh.jpg)
 
 The advisory meeting was similarly productive, with participation from Arm, AMD, Qualcomm, Red Hat, Renesas and TI to discuss future perspectives, needs, and capabilities. 
 
