--- a/src/content/news/linaro-unveils-onelab-at-connect-revolutionizing-edge-compute-interoperability-testing.mdx
+++ b/src/content/news/linaro-unveils-onelab-at-connect-revolutionizing-edge-compute-interoperability-testing.mdx
@@ -33,7 +33,7 @@ The launch of ONELab has already garnered strong support from industry leaders, 
 
 “Qualcomm is thrilled to bring RB2 Edge Compute platform to ONELab towards continuous testing/integration of Open-source OSs/Upstream Kernel and ARM System-Ready-IR test suite”, said Guru Chinnabhandar, Senior Director, Engineering at Qualcomm. “This paves the way for host of other IoT Edge Compute platforms such as RB1, RB3, RB5, RB3Gen2 and RB5Gen2.”
 
-“Texas Instruments is excited to be a founding partners of Linaro’s ONELab initiative. ONELab will play a vital role in continuously assessing the compliance of TI platforms with Arm SystemReady IR standards. This will give our customers confidence that our platforms meet, and will continue to meet, Arm’s rigorous standards. As a committed partner of the ONELab Advisory Board, we are dedicated to ensuring that the ONELab service provides true value to our customers.” said Artem Aginskiy, General Manager, Arm-based Processors, Texas Instruments.
+“Texas Instruments is excited to be a founding partner of Linaro’s ONELab initiative. ONELab will play a vital role in continuously assessing the compliance of TI platforms with Arm SystemReady IR standards. This will give our customers confidence that our platforms meet, and will continue to meet, Arm’s rigorous standards. As a committed partner of the ONELab Advisory Board, we are dedicated to ensuring that the ONELab service provides true value to our customers.” said Artem Aginskiy, General Manager, Arm-based Processors, Texas Instruments.
 
 “Linaro’s ONELab is arriving at the same time as our first 64-bit microprocessor device (STM32MP25x) on the market and we are eager to contribute to the deployment of this initiative. It is a great opportunity to foster interoperability through the standardized firmware API and shorten integration time from SoC to cloud-based services,” said Philippe Peurichard, MPU Embedded SW Manager at STMicroelectronics.
 
