--- a/src/content/blogs/linaro-at-the-confidential-computing-summit-2024.mdx
+++ b/src/content/blogs/linaro-at-the-confidential-computing-summit-2024.mdx
@@ -11,7 +11,7 @@ related: []
 ---
 Organized by the [Confidential Computing Consortium](https://confidentialcomputing.io/) and [Opaque](https://www.opaque.co/), Confidential Computing Summit (CCS) is a conference that brings together a community of actors working in the field of confidential computing.  Its goal is to promote the collaboration and dialog between HW vendors, cloud providers and software developers to drive forward the technology while embracing open collaboration.  Linaro has been active in the area of confidential computing for over two years and took part in the event to bring awareness to the solution it is putting forward.   
 
-In cooperation with Arm and other community members, Linaro has worked to support confidential computing on Arm platforms.  The end result is a stack that is based on open source projects that include QEMU, Trusted Firmware-A, EDK2, the Linux kernel, Kata Containers and Confidential Containers (CoCo).  It runs on QEMU v8.1 and above along with Arm’s Fixed Virtual Platform (FVP) emulator.  Where to get, build and run the solution is available in [this document](https://linaro.atlassian.net/wiki/spaces/QEMU/pages/29051027459/Building+an+RME+stack+for+QEMU).  We encourage interested parties to try the stack in their environment and take advantage of the public verification service hosted by Linaro.  It is provided to exercise an end-to-end scenario where all elements, from firmware to verification, are open and reproducible.
+In cooperation with Arm and other community members, Linaro has worked to support confidential computing on Arm platforms.  The end result is a stack that is based on open source projects that include QEMU, Trusted Firmware-A, EDK2, the Linux kernel, Kata Containers and Confidential Containers (CoCo).  It runs on QEMU v8.1 along with Arm’s Fixed Virtual Platform (FVP) emulator.  Where to get, build and run the solution is available in [this document](https://linaro.atlassian.net/wiki/spaces/QEMU/pages/29051027459/Building+an+RME+stack+for+QEMU).  We encourage interested parties to try the stack in their environment and take advantage of the public verification service hosted by Linaro.  It is provided to exercise an end-to-end scenario where all elements, from firmware to verification, are open and reproducible.
 
 ![CCS2024 hosted by Opaque](/linaro-website/images/blog/ccs2024-image2_jqfwcu.jpg)
 
