--- a/src/content/blogs/new-release-windowsperf-visual-studio-extension-v1000.mdx
+++ b/src/content/blogs/new-release-windowsperf-visual-studio-extension-v1000.mdx
@@ -1,5 +1,5 @@
 ---
-title: New Release: WindowsPerf Visual Studio Extension v1.0.0
+title: "New Release: WindowsPerf Visual Studio Extension v1.0.0"
 description: >
   We’re excited to announce the release of the WindowsPerf Visual Studio Extension v1.0.0, our first stable release after the beta.
 date: 2024-07-23T09:00:00.000Z
