--- a/src/content/blogs/initial-u-boot-release-for-qualcomm-platforms.mdx
+++ b/src/content/blogs/initial-u-boot-release-for-qualcomm-platforms.mdx
@@ -10,6 +10,8 @@ author: caleb-connolly
 related: []
 ---
 
+### Today we announce the first binary release of U-Boot for Qualcomm boards, following a year long bringup and upstreaming effort.
+
 Based on 2024.10-rc2, support is provided for core functionality (EFI, booting from internal storage, booting from USB) on all listed platforms, with conditional support for USB gadget modes, sdcard access and ethernet on some boards. In addition, the RB5 board can boot with KVM support with a special U-Boot build replacing the original hypervisor image.
 
 This article will walk you through flashing the binary releases, building from source, and hopefully provide some context to Qualcomm’s boot process and how U-Boot fits into the Qualcomm ecosystem.
